--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
         <nav>
           <div class="container"></div>
           <ul class="menu">
-            <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+            <li class="menu_item"><a href="#" class="menu_link">Main page</a></li>
             <li class="menu_item">
-              <a href="#" class="menu_link">Со своим автомобилем</a>
+              <a href="#" class="menu_link">With a car</a>
             </li>
             <li class="menu_item">
-              <a href="#" class="menu_link">На автомобиле компании</a>
+              <a href="#" class="menu_link">By company car</a>
             </li>
             <li class="menu_item">
-              <a href="#" class="menu_link">Требования</a>
+              <a href="#" class="menu_link">Requirements</a>
             </li>
             <li class="menu_item">
-              <a href="#" class="menu_link">Контакты</a>
+              <a href="#" class="menu_link">Contacts</a>
             </li>
             <li class="menu_item">
-              <a href="#" class="menu_link">Оставить заявку</a>
+              <a href="#" class="menu_link">Submit your application</a>
             </li>
           </ul>
           </div>
@@ -45,16 +45,16 @@
           <div class="col-md-4 offset-md-1">
             <a href="#" class="subheader_logo"> <img src="img/logo/Uber.png" alt="logo"> </a>
             <div class="subheader_official">
-              Официальный партнер Uber в Москве
+              Official partner of Uber
             </div>
           </div>
           <div class="col-md-2 offset-md-2">
-              <div class="subheader_call">Звоните нам ежедневно</div>
-              <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
+              <div class="subheader_call">Call us daily</div>
+              <a href="tel:84957970988" class="subheader_phone">1 495 797 09 88</a>
          </div>
          <div class="col-md-2">
             <button class="subheader_btn">
-              Заказать звонок
+              Request a call
             </button>
 </div>
           </div>
@@ -65,15 +65,15 @@
       <div class="container">
         <div class="row">
           <div class="col-md-10 offset-md-1">
-            <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
-            <h2 class="promo_text">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
+            <h1 class="promo_header">UBER PARTNERS COMPANY!</h1>
+            <h2 class="promo_text">WE INVITE DRIVERS!  ON YOUR CAR!</h2>
             <p class="promo_main_text">
-              Компания UBER  динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы за пиковое время.
+              UBER is a dynamic company.  The company occupies a leading position in the market among taxi companies. The company is absolutely transparent; you can control all processes in your personal account.  Bonus system. In addition to the work performed on orders, the company accrues bonuses for peak time.
               <br>
-              <span> Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 в месяц.</span>
+              <span> We are one of the partners and have established ourselves as one of the best teams.  Our drivers earn between 80,000 and 120,000 a month.</span>
             </p>
             <button class="promo_btn">
-              ОТПРАВИТЬ ЗАЯВКУ!
+              SEND REQUEST!
             </button>
           </div>
         </div>
