--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     />
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
     <header>
-        <nav>
-          <div class="container"></div>
+      <nav>
+        <div class="container">
           <ul class="menu">
-            <li class="menu_item"><a href="#" class="menu_link">Main page</a></li>
+            <li class="menu_item">
+              <a href="#" class="menu_link">Main page</a>
+            </li>
             <li class="menu_item">
               <a href="#" class="menu_link">With a car</a>
             </li>
@@ -37,26 +39,26 @@
               <a href="#" class="menu_link">Submit your application</a>
             </li>
           </ul>
-          </div>
-        </nav>
+        </div>
+      </nav>
       <div class="subheader">
         <div class="container">
           <div class="row">
-          <div class="col-md-4 offset-md-1">
-            <a href="#" class="subheader_logo"> <img src="img/logo/Uber.png" alt="logo"> </a>
-            <div class="subheader_official">
-              Official partner of Uber
+            <div class="col-md-4 offset-md-1">
+              <a href="#" class="subheader_logo">
+                <img src="img/logo/Uber.png" alt="logo" />
+              </a>
+              <div class="subheader_official">Official partner of Uber</div>
             </div>
-          </div>
-          <div class="col-md-2 offset-md-2">
+            <div class="col-md-2 offset-md-2">
               <div class="subheader_call">Call us daily</div>
-              <a href="tel:84957970988" class="subheader_phone">1 495 797 09 88</a>
-         </div>
-         <div class="col-md-2">
-            <button class="subheader_btn">
-              Request a call
-            </button>
-</div>
+              <a href="tel:84957970988" class="subheader_phone"
+                >1 495 797 09 88</a
+              >
+            </div>
+            <div class="col-md-2">
+              <button class="subheader_btn">Request a call</button>
+            </div>
           </div>
         </div>
       </div>
@@ -66,18 +68,306 @@
         <div class="row">
           <div class="col-md-10 offset-md-1">
             <h1 class="promo_header">UBER PARTNERS COMPANY!</h1>
-            <h2 class="promo_text">WE INVITE DRIVERS!  ON YOUR CAR!</h2>
+            <h2 class="promo_text">WE INVITE DRIVERS! ON YOUR CAR!</h2>
             <p class="promo_main_text">
-              UBER is a dynamic company.  The company occupies a leading position in the market among taxi companies. The company is absolutely transparent; you can control all processes in your personal account.  Bonus system. In addition to the work performed on orders, the company accrues bonuses for peak time.
-              <br>
-              <span> We are one of the partners and have established ourselves as one of the best teams.  Our drivers earn between 80,000 and 120,000 a month.</span>
+              UBER is a dynamic company. The company occupies a leading position
+              in the market among taxi companies. The company is absolutely
+              transparent; you can control all processes in your personal
+              account. Bonus system. In addition to the work performed on
+              orders, the company accrues bonuses for peak time.
+              <br />
+              <span>
+                We are one of the partners and have established ourselves as one
+                of the best teams. Our drivers earn between 80,000 and 120,000 a
+                month.</span
+              >
             </p>
-            <button class="promo_btn">
-              SEND REQUEST!
-            </button>
+            <button class="promo_btn">SEND REQUEST!</button>
           </div>
         </div>
       </div>
     </section>
+    <section class="main_info">
+      <div class="container">
+        <div class="lable">Benefits</div>
+        <h2 class="main-title">8 reasons to start working with us</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="reason_block">
+              <div class="img-6">
+                <img src="icon/Rectangle-2.png" alt="red check" />
+              </div>
+              <div class="reason_desc">
+                <div class="reason_subtitle">No cash, payment is automatic</div>
+                <div class="reason_text">
+                  The cost of the trip is paid by the passenger from the linked
+                  bank card, i.е. there are no risks associated with the
+                  carriage of cash for both the passenger and the driver, you do
+                  not need to look for small money for exchange
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="reason_block">
+              <div class="img-6">
+                <img src="icon/Rectangle-2.png" alt="red check" />
+              </div>
+              <div class="reason_desc">
+                <div class="reason_subtitle">Commission 8% + BONUSES</div>
+                <div class="reason_text">
+                  We have a minimum commission and we pay bonuses for each trip,
+                  some of our competitors keep bonuses for themselves. We work
+                  honestly and drivers earn more with us!
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="reason_block">
+              <div class="img-6">
+                <img src="icon/Rectangle-2.png" alt="red check" />
+              </div>
+              <div class="reason_desc">
+                <div class="reason_subtitle">
+                  High income with guaranteed payouts
+                </div>
+                <div class="reason_text">
+                  We pay wages to the driver's personal bank card! You do not
+                  need to register an LLC, individual entrepreneur, pay taxes,
+                  file a declaration, pay for accounting services and maintain a
+                  bank account.
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="reason_block">
+              <div class="img-6">
+                <img src="icon/Rectangle-2.png" alt="red check" />
+              </div>
+              <div class="reason_desc">
+                <div class="reason_subtitle">
+                  Work at a convenient time, no schedules
+                </div>
+                <div class="reason_text">
+                  You just press the button to get on the line to start working,
+                  when you decide to finish, press to get off the line. You can
+                  only earn money in the morning, in the evening, on weekends or
+                  holidays!
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="mobile_app">
+      <div class="container">
+        <div class="lable">possibilities</div>
+        <h2 class="main-title">uber mobile app</h2>
+        <div class="title-text">
+          Place an order, make a trip and pay for it using your mobile phone
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="mobile_app_block mobile_app_block_1">
+              <div class="mobile_app_text">Feedback</div>
+              <div class="mobile_app_img-plus"></div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="mobile_app_block mobile_app_block_2">
+              <div class="mobile_app_text">Feedback</div>
+              <div class="mobile_app_img-plus"></div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="mobile_app_block mobile_app_block_3">
+              <div class="mobile_app_text">Feedback</div>
+              <div class="mobile_app_img-plus"></div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="mobile_app_block mobile_app_block_4">
+              <div class="mobile_app_text">Feedback</div>
+              <div class="mobile_app_img-plus"></div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="mobile_app_block mobile_app_block_5">
+              <div class="mobile_app_text">Feedback</div>
+              <div class="mobile_app_img-plus"></div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="mobile_app_block mobile_app_block_6">
+              <div class="mobile_app_text">Feedback</div>
+              <div class="mobile_app_img-plus"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="car-info">
+      <div class="container">
+        <div class="black"></div>
+        <div class="lable lable_white">possibilities</div>
+        <h2 class="main-title main-title_white">Choice is great!</h2>
+        <div class="title-text title-text_white">
+          Order a car that suits your style and budget
+        </div>
+        <div>
+          <img
+            src="img/auto.png"
+            alt="blck_car"
+            class="car-info_img-black-car"
+          />
+        </div>
+        <div class="car-info_bottom-text">
+          Cars for every day<br />
+          Better, faster and cheaper than a taxi
+        </div>
+      </div>
+    </section>
+
+    <section class="info_cell">
+      <div class="container">
+        <div class="lable">possibilities</div>
+        <h2 class="main-title">conditions and requirements</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="info_cell_block">
+              <div class="info_cell_title">CONDITIONS: with your own car:</div>
+              <ul class="info_cell_list">
+                <li>We connect to the UBER system at 10%</li>
+                <li>No 0% fees!</li>
+                <li>We can connect remotely without coming to the office</li>
+                <li>
+                  Orders are distributed without taking into account the rating
+                  of the nearest drivers
+                </li>
+                <li>Work only by bank transfer</li>
+                <li>
+                  We transfer money to the card to the driver or in cash at the
+                  office
+                </li>
+              </ul>
+              <div class="info_cell_decr">
+                Daily earnings are 7000-12000 + bonus 3000
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="info_cell_block">
+              <div class="info_cell_title">CONDITIONS: with your own car:</div>
+              <ul class="info_cell_list">
+                <li>We connect to the UBER system at 10%</li>
+                <li>No 0% fees!</li>
+                <li>We can connect remotely without coming to the office</li>
+                <li>
+                  Orders are distributed without taking into account the rating
+                  of the nearest drivers
+                </li>
+                <li>Work only by bank transfer</li>
+                <li>
+                  We transfer money to the card to the driver or in cash at the
+                  office
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="info_cell_block info_cell_block_nmb warning">
+              <div class="info_cell_title">CONDITIONS: with your own car:</div>
+              <ul class="info_cell_list">
+                <li>We connect to the UBER system at 10%</li>
+                <li>No 0% fees!</li>
+                <li>We can connect remotely without coming to the office</li>
+                <li>
+                  Orders are distributed without taking into account the rating
+                  of the nearest drivers
+                </li>
+                <li>Work only by bank transfer</li>
+                <li>
+                  We transfer money to the card to the driver or in cash at the
+                  office
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="info_cell_block info_cell_block_nmb warning">
+              <div class="info_cell_title">CONDITIONS: with your own car:</div>
+              <ul class="info_cell_list">
+                <li>We connect to the UBER system at 10%</li>
+                <li>No 0% fees!</li>
+                <li>We can connect remotely without coming to the office</li>
+                <li>
+                  Orders are distributed without taking into account the rating
+                  of the nearest drivers
+                </li>
+                <li>Work only by bank transfer</li>
+                <li>
+                  We transfer money to the card to the driver or in cash at the
+                  office
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="map">
+      <div class="container">
+        <div class="lable_white">cities</div>
+        <h2 class="main-title_white">around the world</h2>
+        <div class="title-text title-text_white">
+          We are in your city and around the world
+        </div>
+        <div class="map_link">
+          <a href="#" class="map_link_">see all cities</a>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer_line">
+          <span></span>
+        </div>
+        <div class="footer_links">
+          <div class="footer_link">
+            <a href="#">To main</a>
+          </div>
+
+          <div class="footer_link">
+            <a href="#">cities</a>
+          </div>
+
+          <div class="footer_link">
+            <a href="#">for drivers</a>
+          </div>
+        </div>
+        <div class="footer_extra_links">
+          <div class="footer_extra_link">
+            <a href="#">support Center</a>
+          </div>
+          <div class="footer_extra_link"><a href="#">vacancies</a></div>
+          <div class="footer_extra_link">
+            <a href="#">developers</a>
+          </div>
+          <div class="footer_extra_link">
+            <a href="#">blog</a>
+          </div>
+          <div class="footer_extra_link"><a href="#">about Us</a></div>
+        </div>
+        <div class="footer_lang">english</div>
+      </div>
+    </footer>
   </body>
 </html>
